--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,28 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
+console_error_panic_hook = "0.1.2"
+js-sys = "0.3.63"
+lazy_static = "1.4.0"
+nalgebra = "0.32.2"
+wasm-bindgen = "0.2.86"
+
+[dependencies.web-sys]
+version = "0.3.63"
+features = [
+    'Document',
+    'Element',
+    'EventTarget',
+    'HtmlCanvasElement',
+    'MouseEvent',
+    'WebGlBuffer',
+    'WebGlProgram',
+    'WebGlRenderingContext',
+    'WebGlShader',
+    'WebGlUniformLocation',
+    'Window',
+]
